
Copyright (C) 2004  Martin Geisler <gimpster@users.sourceforge.net>
Licensed under the GNU GPL, see COPYING for details.


PEL Version 0.3  ?th May 2004
*****************************

Notes:

The decoding of EXIF data is now tested against known values, this
lead to the discovery of a couple of subtle bugs.  The documentation
has been expanded.

Changes:

* Added support for the SCENE_TYPE tag.

* Fixed display of integer version numbers.  Version x.0 would be
  displayed as just version 'x' before.

* Unit tests for EXIF decoding.

* Changed all occurances of include_once() to require_once() since the
  files are required.

* Updated documentation all over.


PEL Version 0.2  16th May 2004
******************************

Notes:

This release brings updated documentation and better support for the
EXIF user comment tag and tags containing version information.  The
code is now tested using SimpleTest.

Changes:

* All PelExifEntry descendant classes now use setValue() and
  getValue() methods consistently.

* Signed and unsigned numbers (bytes, shorts, longs, and rationals)
  are now handled correctly.

* The SimpleTest (http://sf.net/projects/simpletest) framework is used
  for regression testing.

* Added new PelExifEntryUserComment class to better support the EXIF
  user comment tag.

* Added new PelExifEntryVersion class to support the EXIF tags with
  version information, namely the EXIF_VERSION, FLASH_PIX_VERSION, and
  INTEROPERABILITY_VERSION tags.

* Updated doc comments all over.

PEL Version 0.1  8th May 2004
*****************************

Notes:

The initial release of PEL.  Most of the functionality is in place:
JPEG files are parsed, EXIF entries are found and interpreted, the
entries can be edited and new entries can be added, and finally, the
whole thing can be turned into bytes and saved as a valid JPEG file.

The API is still subject to change, and will remain so until version
1.0 is reached.